Clean up the APIs
